force-app/main/default/objects/Adbuilder__c/Adbuilder__c.object-meta.xml
<CustomObject>
    <label>Adbuilder</label>
    <nameField>
        <label>Adbuilder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adbuilders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>