force-app/main/default/objects/Adbuilder__c/fields/Ad_Title_Image_10__c.field-meta.xml
<CustomField>
    <fullName>Ad_Title_Image_10__c</fullName>
    <label>Ad Title 10</label>
    <length>90</length>
    <type>Text</type>
</CustomField>