force-app/main/default/objects/Adbuilder__c/fields/Asset_Transfer_We_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Asset_Transfer_We_Transfer__c</fullName>
    <label>Asset Transfer (We Transfer)</label>
    <type>Url</type>
</CustomField>