force-app/main/default/objects/Adbuilder__c/fields/Copy_in_each_image__c.field-meta.xml
<CustomField>
    <fullName>Copy_in_each_image__c</fullName>
    <label>Copy in each image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>