force-app/main/default/objects/Adbuilder__c/fields/Copy_Title__c.field-meta.xml
<CustomField>
    <fullName>Copy_Title__c</fullName>
    <label>Copy/Title</label>
    <length>25</length>
    <type>Text</type>
</CustomField>