force-app/main/default/objects/Adbuilder__c/fields/CTA_Call_To_Action_Image_1__c.field-meta.xml
<CustomField>
    <fullName>CTA_Call_To_Action_Image_1__c</fullName>
    <label>CTA (Call To Action) 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Now</fullName>
            </value>
            <value>
                <fullName>Book Now</fullName>
            </value>
            <value>
                <fullName>Call Now</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Directions</fullName>
            </value>
            <value>
                <fullName>Find out More</fullName>
            </value>
            <value>
                <fullName>Send a Message</fullName>
            </value>
            <value>
                <fullName>Request a timetable</fullName>
            </value>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>See the menu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>