force-app/main/default/objects/Adbuilder__c/fields/Description_for_copy_of_image__c.field-meta.xml
<CustomField>
    <fullName>Description_for_copy_of_image__c</fullName>
    <label>Description for copy of image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>