force-app/main/default/objects/Adbuilder__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <description>..</description>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adbuilder_Record_Types</valueSetName>
    </valueSet>
</CustomField>