force-app/main/default/objects/Adbuilder__c/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <label>Headline</label>
    <length>45</length>
    <type>Text</type>
</CustomField>