force-app/main/default/objects/Adbuilder__c/fields/Headline_Image_1__c.field-meta.xml
<CustomField>
    <fullName>Headline_Image_1__c</fullName>
    <label>Headline 1</label>
    <length>90</length>
    <type>Text</type>
</CustomField>