force-app/main/default/objects/Adbuilder__c/fields/Image_3__c.field-meta.xml
<CustomField>
    <fullName>Image_3__c</fullName>
    <formula>IMAGE(URL_Image_3__c, &quot;No Image to render&quot; , 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image 3</label>
    <type>Text</type>
</CustomField>