force-app/main/default/objects/Adbuilder__c/fields/Image_slideshow_2__c.field-meta.xml
<CustomField>
    <fullName>Image_slideshow_2__c</fullName>
    <label>Image 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>