force-app/main/default/objects/Adbuilder__c/fields/image_Video_Max_5__c.field-meta.xml
<CustomField>
    <fullName>image_Video_Max_5__c</fullName>
    <label>Image/Video(Max 5)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>