force-app/main/default/objects/Adbuilder__c/fields/Line_number_on_the_MBS__c.field-meta.xml
<CustomField>
    <fullName>Line_number_on_the_MBS__c</fullName>
    <label>Line number on the MBS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>