force-app/main/default/objects/Adbuilder__c/fields/Link_Description_Image_10__c.field-meta.xml
<CustomField>
    <fullName>Link_Description_Image_10__c</fullName>
    <label>Link Description 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>