force-app/main/default/objects/Adbuilder__c/fields/Live_from__c.field-meta.xml
<CustomField>
    <fullName>Live_from__c</fullName>
    <label>Live from</label>
    <type>Date</type>
</CustomField>