force-app/main/default/objects/Adbuilder__c/fields/Live_to__c.field-meta.xml
<CustomField>
    <fullName>Live_to__c</fullName>
    <label>Live to</label>
    <type>Date</type>
</CustomField>