force-app/main/default/objects/Adbuilder__c/fields/Main_Copy_Description__c.field-meta.xml
<CustomField>
    <fullName>Main_Copy_Description__c</fullName>
    <label>Main Copy/Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>