force-app/main/default/objects/Adbuilder__c/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Activity</label>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Adbuilders</relationshipLabel>
    <relationshipName>Adbuilders</relationshipName>
    <type>Lookup</type>
</CustomField>