force-app/main/default/objects/Adbuilder__c/fields/Note_1__c.field-meta.xml
<CustomField>
    <fullName>Note_1__c</fullName>
    <label>Note 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>