force-app/main/default/objects/Adbuilder__c/fields/Note_2__c.field-meta.xml
<CustomField>
    <fullName>Note_2__c</fullName>
    <label>Note 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>