force-app/main/default/objects/Adbuilder__c/fields/Slideshow_Template__c.field-meta.xml
<CustomField>
    <fullName>Slideshow_Template__c</fullName>
    <label>Slideshow Template</label>
    <length>90</length>
    <type>Text</type>
</CustomField>