force-app/main/default/objects/Adbuilder__c/fields/Sub_Copy_Link_Description__c.field-meta.xml
<CustomField>
    <fullName>Sub_Copy_Link_Description__c</fullName>
    <label>Sub Copy/Link Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>