force-app/main/default/objects/Adbuilder__c/fields/Text_Overlay_10__c.field-meta.xml
<CustomField>
    <fullName>Text_Overlay_10__c</fullName>
    <label>Text Overlay 10</label>
    <length>30</length>
    <type>Text</type>
</CustomField>