force-app/main/default/objects/Adbuilder__c/fields/URL_Image_10__c.field-meta.xml
<CustomField>
    <fullName>URL_Image_10__c</fullName>
    <label>URL 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>