force-app/main/default/objects/Adbuilder__c/fields/URL_Image_2__c.field-meta.xml
<CustomField>
    <fullName>URL_Image_2__c</fullName>
    <label>URL 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>