force-app/main/default/objects/Adbuilder__c/recordTypes/Canvas.recordType-meta.xml
<RecordType>
    <fullName>Canvas</fullName>
    <active>true</active>
    <label>Facebook Canvas</label>
</RecordType>