force-app/main/default/objects/Adbuilder__c/recordTypes/Facebook_Carousel.recordType-meta.xml
<RecordType>
    <fullName>Facebook_Carousel</fullName>
    <active>true</active>
    <label>Facebook Carousel</label>
</RecordType>