force-app/main/default/objects/Adbuilder__c/recordTypes/Facebook_Story.recordType-meta.xml
<RecordType>
    <fullName>Facebook_Story</fullName>
    <active>true</active>
    <label>Facebook Story</label>
</RecordType>