force-app/main/default/objects/Adbuilder__c/recordTypes/Image_Link_Ad.recordType-meta.xml
<RecordType>
    <fullName>Image_Link_Ad</fullName>
    <active>true</active>
    <label>Facebook Image Link Ad</label>
</RecordType>