force-app/main/default/objects/Adbuilder__c/recordTypes/Instagram_Carousel.recordType-meta.xml
<RecordType>
    <fullName>Instagram_Carousel</fullName>
    <active>true</active>
    <label>Instagram Carousel</label>
</RecordType>