force-app/main/default/objects/Adbuilder__c/recordTypes/Instagram_Image_Link_Ad.recordType-meta.xml
<RecordType>
    <fullName>Instagram_Image_Link_Ad</fullName>
    <active>true</active>
    <label>Instagram Image Link Ad</label>
</RecordType>