force-app/main/default/objects/Adbuilder__c/recordTypes/Instagram_Story.recordType-meta.xml
<RecordType>
    <fullName>Instagram_Story</fullName>
    <active>true</active>
    <label>Instagram Story</label>
</RecordType>