force-app/main/default/objects/Adbuilder__c/recordTypes/Mixed_Placement_Paid_Social.recordType-meta.xml
<RecordType>
    <fullName>Mixed_Placement_Paid_Social</fullName>
    <active>true</active>
    <description>.</description>
    <label>Mixed Placement Paid Social</label>
</RecordType>