force-app/main/default/objects/Adbuilder__c/recordTypes/Slideshow_Ad.recordType-meta.xml
<RecordType>
    <fullName>Slideshow_Ad</fullName>
    <active>true</active>
    <label>Slideshow Ad</label>
</RecordType>