force-app/main/default/objects/Adbuilder__c/recordTypes/Video_Link_Ad.recordType-meta.xml
<RecordType>
    <fullName>Video_Link_Ad</fullName>
    <active>true</active>
    <label>Video Link Ad</label>
</RecordType>