force-app/main/default/objects/Adbuilder__c/recordTypes/Video_Post_Page.recordType-meta.xml
<RecordType>
    <fullName>Video_Post_Page</fullName>
    <active>true</active>
    <label>Video Post Page</label>
</RecordType>